[package]
name = "neon-wasi-http"
version = "0.3.0"
edition = "2021"
authors = ["Timmy Silesmo"]
description = "Neon Postgres WASI HTTP driver"
license = "Apache-2.0"
repository = "https://github.com/Nor2-io/neon-wasi-http"
keywords = ["neon", "database", "postgres", "postgresql"]


[dependencies]
wstd = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
